# dunderbot

./: .gitignore  Debug env.ipynb  Dockerfile  Makefile  Playground.ipynb  README.md  docker-compose.override.yml  docker-compose.yml  install-systemlibs.sh  pyproject.toml
config/: config.yml
envs/: __init__.py
envs/mlfin_env/: mlfin_env.py
src/: data_raw.py  load.py  main.py  preprocess.py  run.py  run_debug.py  setup.py
src/env/: DebugEnv.py  DunderBotEnv.py  __init__.py  dunderbot_env.py  reward_schema.py
src/env/callback/: custom_callback.py
src/env/render/: ActionDistribution.py  RewardDevelopment.py  TradingChart.py  TradingChartStatic.py  __init__.py
src/env/rewards/: BaseRewardStrategy.py  IncrementalNetWorth.py  RiskAdjustedReturns.py  __init__.py
src/env/trade/: Benchmarks.py  TradeStrategies.py  TradeStrategy.py
src/util/: config.py  run_util.py  utils.py  yaml_loader.py
