[tool.poetry]
name = "dunderbot"
version = "0.1.0"
description = "The dunderbot"
authors = ["perjonasam"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0"
jupyter = "^1.0.0"
stable-baselines = "^2.10.0"
tensorflow = "^1"
pyyaml = "^5.3.1"
requests = "^2.24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
